# 2110452-hpc-hw1-q1

./: CMakeLists.txt  main.cpp
